--- a/templates/home2.html
+++ b/templates/home2.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
-{#     <link rel="stylesheet" href="{% static '/resources/css/css/bootstrap.min.css' %}">#}
+     <link rel="stylesheet" href="{% static '/resources/css/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'resources/css/css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static '/resources/css/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static '/resources/css/css/magnific-popup.css' %}">
